# AI-model-deployment-project

./: .gitignore  README.md
Deployment/: README.md  cpp_style_guide.md  project_timeline.md
Deployment/web_monitor/: api_server.py  desktop_client.py
Deployment/yolov5_ROS/: Android.bp  CMakeLists.txt  main.cpp  run.sh  yolov5_post_process.cpp  yolov5_post_process.h
Deployment/yolov5_ROS/launch/: ball_track.launch
Deployment/yolov5_ROS/model/: Android.bp
Deployment/yolov5_ROS_1.0/: README.md
Deployment/yolov5_ROS_1.0/catkin_ws/devel/: .catkin
Deployment/yolov5_ROS_1.0/catkin_ws/install/: local_setup.sh  setup.sh
Deployment/yolov5_ROS_1.0/catkin_ws/src/libawnn_viplite/: awnn_internal.h  awnn_lib.c
Deployment/yolov5_ROS_1.0/catkin_ws/src/libawutils/: Android.bp
Deployment/yolov5_ROS_1.0/catkin_ws/src/yolov5_vision/: vision_node.cpp  yolov5_post_process.cpp  yolov5_pre_process.cpp  yolov5_pre_process.h
Deployment/yolov5_ROS_1.0/catkin_ws/src/yolov5_vision/launch/: ball_track.launch.py
Deployment/yolov5_ROS_2.0/: README.md
Deployment/yolov5_ROS_2.0_web_monitor/: README.md  desktop_client.py  start.bat
Deployment/yolov5_ROS_2.0_web_monitor/catkin_ws/src/libawnn_viplite/: Android.bp
Deployment/yolov5_ROS_2.0_web_monitor/catkin_ws/src/motor_control/: CMakeLists.txt  motor_node.cpp
Deployment/yolov5_ROS_2.0_web_monitor/catkin_ws/src/yolov5_vision/: api_server.py  vision_node.cpp
Deployment/yolov5_ROS_3.0_MultiThread/: README.md
Deployment/yolov5_ROS_3.0_RAIIManagement/: README.md
Deployment/yolov5_ROS_3.0_RAIIManagement/src/motor_control/: motor_node.cpp
Deployment/yolov5_ROS_3.0_RAIIManagement/src/yolov5_vision/: CMakeLists.txt  api_server.py  vision_node.cpp  yolov5_post_process.cpp
Deployment/yolov5_ROS_4.0_PerfOptimization/: README.md  vision_node.cpp  yolov5_post_process.cpp  yolov5_post_process.h  yolov5_pre_process.cpp  yolov5_pre_process.h
Deployment/yolov5_camera/: CMakeLists.txt  Makefile  main.cpp  run.sh  yolov5_post_process.cpp
Deployment/yolov5_static/: CMakeLists.txt  yolov5_post_process.cpp  yolov5_pre_process.cpp
Deployment/yolov5_static/input_data/: Android.bp
ModelTraining/: README.md
ModelTraining/Yolov5/: ExportModelProcess.docx  ModelExport_noDecode.py  ball_deployment_guide.md  train_yolov5_ball.py
ModelTraining/Yolov5/datasets/: extract_frames.py
ModelTraining/Yolov5/datasets/ball/: ball.yaml  convert_json2yolo.py
ModelTraining/Yolov5/datasets/ball/labels/: train.cache  val.cache
ModelTraining/Yolov5/datasets/ball/labels/train/: img_0000.json  img_0000.txt  img_0002.json  img_0002.txt  img_0003.json  img_0003.txt  img_0004.json  img_0004.txt  img_0005.json  img_0005.txt  img_0009.json  img_0009.txt  img_0010.json  img_0010.txt  img_0011.json  img_0011.txt  img_0012.json  img_0012.txt  img_0013.json  img_0013.txt  img_0014.json  img_0014.txt  img_0015.json  img_0015.txt  img_0016.json  (+168 more)
ModelTraining/Yolov5/runs/yolov5s_ball/: opt.yaml
ModelTraining/Yolov5/runs/yolov5s_ball2/: opt.yaml  results.csv
ModelTraining/Yolov5/runs/yolov5s_ball3/: opt.yaml
ModelTraining/Yolov5/runs/yolov5s_ball_v2/: opt.yaml  results.csv
ModelTraining/deploy/: CexportModel.py  Ctest_single_image.py  Ctest_validate_onnx.py
ModelTraining/deploy/runs/detect/robot_model_finetuned_final/: args.yaml
ModelTraining/deploy/runs/detect/robot_model_finetuned_final2/: args.yaml
ModelTraining/deploy/runs/detect/robot_model_finetuned_final3/: args.yaml
ModelTraining/deploy/runs/detect/robot_model_finetuned_final4/: args.yaml  results.csv
ModelTraining/docs/: training_guide.md
ModelTraining/train/: BModelTraining.py  data.yml
deploy/: CexportModel.py  Ctest_fine_tune.py  Ctest_validate_onnx.py
train/: data.yml
(+88 files in other folders)
