cmake_minimum_required(VERSION 3.10)
project(motor_control)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
add_executable(motor_node motor_node.cpp)
ament_target_dependencies(motor_node rclcpp std_msgs)
install(TARGETS motor_node DESTINATION lib/${PROJECT_NAME})
ament_package()
